# off-brand-sentinel

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml  publish.yaml
sentinel-app/: Cargo.toml
sentinel-app/src/: main.rs
sentinel-bot/: Cargo.toml  build.rs
sentinel-bot/src/: commands.rs  database.rs  lib.rs  modals.rs  punishments.rs  wrapper.rs
sentinel-common/: Cargo.toml
sentinel-common/src/: config.rs  lib.rs  modals.rs  wrapper.rs
sentinel-common/src/resources/: config.toml
sentinel-factoids/: Cargo.toml
sentinel-factoids/src/: commands.rs  context.rs  database.rs  factoids.rs  lib.rs  modals.rs  util.rs
src/: commands.rs  config.rs  database.rs  main.rs  messages.rs  punishments.rs  wrapper.rs
