[package]
name = "sentinel-bot"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sentinel-common = { workspace = true }
poise = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

[lib]
name = "sentinel_bot"
