[package]
name = "sentinel-bot"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sentinel-common = { workspace = true }
sentinel-factoids = { workspace = true }
poise = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
futures-util = { workspace = true }

[lib]
name = "sentinel_bot"
